--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "aws-cdk-lib==2.162.1",
+    "boto3>=1.26.0",
     "constructs>=10.0.0,<11.0.0",
+    "psycopg2-binary>=2.9.5",
 ]
