--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,100 @@
-node_modules
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# AWS CDK
+cdk.out/
+*.js.map
+*.d.ts
+
+# Logs
+*.log
+logs/
+
+backend/lambda/**/bin
+backend/lambda/**/aws_psycopg2-1.3.8.dist-info/
+backend/lambda/**/boto3/
+backend/lambda/**/boto3-1.38.43.dist-info/
+backend/lambda/**/botocore-1.38.43.dist-info/
+backend/lambda/**/botocore/
+backend/lambda/**/certifi/
+backend/lambda/**/charset-normalizer/
+backend/lambda/**/dateutil/
+backend/lambda/**/idna/
+backend/lambda/**/jmespath/
+backend/lambda/**/jmespath-1.0.1.dist-info/
+backend/lambda/**/psycopg2/
+backend/lambda/**/psycopg2_binary.libs/
+backend/lambda/**/python_dateutil-2.9.0.post0.dist-info/
+backend/lambda/**/python_dateutil/
+backend/lambda/**/requests/
+backend/lambda/**/s3transfer/
+backend/lambda/**/s3transfer-0.13.0.dist-info/
+backend/lambda/**/six/
+backend/lambda/**/six-1.17.0.dist-info/
+backend/lambda/**/urllib3/
+backend/lambda/**/urllib3-2.5.0.dist-info/
+backend/lambda/**/typing_extensions/
+backend/lambda/**/six.py
+
+# Keep these important files
+!*.md
+!README.md
+!requirements.txt
+!requirements-dev.txt
+!*.json
+!*.yaml
+!*.yml
+!package.json
+!package-lock.json
+!tsconfig.json
