--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,10 +3,8 @@ name = "backend"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.9.6"
 dependencies = [
-    "aws-cdk-lib==2.162.1",
-    "boto3>=1.26.0",
-    "constructs>=10.0.0,<11.0.0",
-    "psycopg2-binary>=2.9.5",
+    "aws-cdk-lib>=2.202.0",
+    "constructs>=10.4.2",
 ]
